test/arrays/ferguson/array-initialization-patterns/array-initialization-patterns-dists.replicated.good
array-initialization-patterns-dists.chpl:205: In function 'testr2':
array-initialization-patterns-dists.chpl:207: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:207: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:294: In initializer:
array-initialization-patterns-dists.chpl:295: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:295: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:311: In function 'testC4':
array-initialization-patterns-dists.chpl:313: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:313: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:350: In initializer:
array-initialization-patterns-dists.chpl:351: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:351: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
array-initialization-patterns-dists.chpl:367: In function 'testR4':
array-initialization-patterns-dists.chpl:369: error: invalid copy-initialization
array-initialization-patterns-dists.chpl:369: error: ReplicatedDist array initialization is not currently supported for element type R - please default-initialize the array
